# orin_agx_flash

./: README.md  setup.config
config/: 35.1.0.env  35.3.1.env  36.3.0.env
nmea/: CMakeLists.txt  package.xml
nmea/chrony/: chrony.conf
nmea/include/nmea/: nmea.h  udp.h  utils.h
nmea/include/nmea/inl/: nmea.inl
nmea/launch/: nmea.launch
nmea/src/: nmea_node.cpp
nmea/src/lib/: timeoutserial.cpp  udp.cpp
orin_r5code/: README.txt
orin_r5code/FreeRTOSV10.4.3/fsp_project/: module-freertos-core-no-safety-config.mk  module-freertos-core-no-safety.mk  module-freertos-mmgr-no-safety-config.mk  module-freertos-mmgr-no-safety.mk  module-freertos-port-cortex-r5-no-safety-config.mk  module-freertos-port-cortex-r5-no-safety.mk
orin_r5code/fsp/source/: module-fsp-common-config.mk  module-fsp-common.mk
orin_r5code/rt-aux-cpu-demo-fsp/: FreeRTOSConfig.h  Makefile  main.c  main.h
orin_r5code/rt-aux-cpu-demo-fsp/app/: aodmic-app.c  aodmic-app.h  gpio-app.c  gpio-app.h  i2c-app.c  i2c-app.h  ivc-echo-task.c  timer-app.c
orin_r5code/rt-aux-cpu-demo-fsp/doc/: aodmic-app.md  compile-flash.md  doxyfile  faq.md  fsp.md  (+8 more)
patches/: IMX264-MIPI-R35.1-Xavier-6cam-dtb-20221031.patch  IMX264-MIPI-R35.1-Xavier-6cam-kernel-20221031.patch  pps-gpio.c.patch  tegra234-aon.dtsi.patch  tegra234-mb1-bct-gpio-p3701-0000-a04.dtsi.patch  tegra234-mb1-bct-pinmux-p3701-0000-a04.dtsi.patch  tegra234-mb1-bct-pinmux-p3701-0000.dtsi.patch
scripts/: apply_binaries.sh  apply_patches.sh  build_and_flash_spe.sh  build_binaries.sh  build_spe.sh  clone.sh  flash.sh  full_process.sh  header.sh
(+679 files in other folders)
